--- a/practice1/src/style/style.css
+++ b/practice1/src/style/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "deja_vu";
+  src: url("../fonts/arial/GEO_AI__.TTF") format("ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -57,4 +64,8 @@ nav {
   margin-left: 25%;
   margin-right: 25%;
   text-align: center;
+}
+
+h2 {
+  font-family: "deja_vu";
 }
