--- a/practice1/src/style/style.css
+++ b/practice1/src/style/style.css
@@ -12,7 +12,9 @@
 }
 
 body {
-  background-image: url(https://img3.goodfon.com/wallpaper/nbig/b/ca/new-york-city-night-lights.jpg);
+  background-image: url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #cccccc;
 }
 
@@ -27,6 +29,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 5%;
 }
 
 .nav-links {
@@ -66,6 +69,13 @@ nav {
   text-align: center;
 }
 
-h2 {
-  font-family: "deja_vu";
+.btn-explore {
+  display: inline-flex;
+  align-items: center;
+  align-content: center;
+  box-sizing: border-box;
+  padding: 10px 30px;
+  border: 2px solid yellow;
+  border-radius: 10px;
+  cursor: pointer;
 }
