--- a/practice1/src/style/style.css
+++ b/practice1/src/style/style.css
@@ -106,23 +106,59 @@ nav {
   flex-basis: 20%;
   border-radius: 10px;
   margin-bottom: 5%;
-  background: #fff3f3;
+  border: groove;
   padding-bottom: 12px;
   box-sizing: border-box;
 }
 
 .col-head {
-  margin: auto;
-  padding-top: 0;
+  padding-top: 20%;
+  padding-bottom: 20%;
   color: white;
   background-image: url(../images/coffee-cup.jpg);
   background-position: center;
-  background-size: cover;
+  background-size: 100%;
   background-repeat: no-repeat;
   position: relative;
 }
 
 .col-foot {
   margin: auto;
-  padding-top: 20px;
+  padding-top: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.col-foot a.btn {
+  padding: 20px 20px;
+  transition: ease-out 0.3s;
+  position: relative;
+  z-index: 1;
+}
+
+.col-foot a.btn :hover {
+  color: #fff;
+  cursor: pointer;
+}
+
+.col-foot a.btn::before {
+  transition: 0.5s all ease;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  opacity: 0;
+  content: "";
+  background-color: lemonchiffon;
+  border-radius: 10px;
+}
+
+.col-foot a.btn:hover::before {
+  transition: 0.5s all ease;
+  left: 0;
+  right: 0;
+  opacity: 1;
+  z-index: -1;
 }
