--- a/practice1/src/style/style.css
+++ b/practice1/src/style/style.css
@@ -85,6 +85,7 @@ nav {
   margin: auto;
   text-align: center;
   padding-top: 50px;
+  font-size: 25px;
 }
 
 .row {
@@ -163,16 +164,21 @@ nav {
   width: 100%;
   margin: auto;
   text-align: center;
-  padding-top: 50px;
-  margin-bottom: 10%;
+  padding: 50px 50px;
+  font-size: 25px;
 }
 
-.left-side {
-  padding: 10px 10px;
+.f-body {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
 
-.left-side i {
-  margin-right: 10px;
-  margin-top: 3px;
+.r-side {
+  margin-right: 15%;
+}
+
+.l-side {
+  margin-left: 20%;
 }
