--- a/practice1/src/styles/main.css
+++ b/practice1/src/styles/main.css
@@ -192,7 +192,7 @@ nav {
   margin-left: 20%;
 }
 
-/* .results-head {
+.results-head {
   margin: auto;
   padding: 50px 50px;
   text-align: center;
@@ -202,12 +202,23 @@ nav {
 .results-head p {
   margin-top: 25px;
   font-size: 15px;
-} */
+}
+
+.details {
+  margin-top: 30px;
+}
+
+.details p {
+  margin-top: 30px;
+  margin: 30px;
+  padding: 20px;
+}
 
 .sign-up-form {
   width: 100%;
   height: 700px;
   margin: auto;
+  margin-top: 50px;
   text-align: center;
   padding: 50px 50px;
   display: flex;
@@ -231,12 +242,6 @@ nav {
 }
 
 .form {
-  /* background: linear-gradient(
-    224.09deg,
-    rgba(37, 35, 35, 0.7) 5.13%,
-    rgba(255, 255, 255, 7e-5) 90.88%
-  );
-  background-blend-mode: soft-light; */
   background: #4b4b4b;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.5);
   width: 400px;
@@ -285,10 +290,10 @@ nav {
   background-color: #f6f6f6;
 }
 
-.footer hr {
-  overflow: visible;
-  border-top-color: black;
-  opacity: 0.5;
+hr {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border: 5px black;
 }
 
 .footer-top {
@@ -319,6 +324,7 @@ nav {
 .social-icon {
   list-style: none;
   margin-top: 20px;
+  font-size: 25px;
 }
 
 .social-icon li {
@@ -339,6 +345,10 @@ nav {
   margin-bottom: 50px;
   position: relative;
   color: #4b4b4b;
+}
+
+.copy-right {
+  padding-top: 30px;
 }
 
 .subcribe {
