--- a/practice1/src/styles/main.css
+++ b/practice1/src/styles/main.css
@@ -92,6 +92,10 @@ nav {
 
 /* Subcribing Plans Page */
 .sub-plan {
+  background-color: #f6f6f6;
+}
+
+.sub-plan-head {
   width: 100%;
   margin: auto;
   text-align: center;
@@ -99,7 +103,7 @@ nav {
   font-size: 25px;
 }
 
-.row {
+.sub-plan-row {
   margin-top: 5%;
   margin-left: 15%;
   margin-right: 15%;
@@ -123,13 +127,47 @@ nav {
   padding-top: 20%;
   padding-bottom: 20%;
   color: white;
+  background-image: url(../assets/images/coffee-cup.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
 }
 
-.col-head h3 {
+.col-head-2 {
+  padding-top: 20%;
+  padding-bottom: 20%;
+  color: white;
+  background-image: url(../assets/images/coffee.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.col-head-3 {
+  padding-top: 20%;
+  padding-bottom: 20%;
+  color: white;
+  background-image: url(../assets/images/coffee-shop.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.col-head-4 {
+  padding-top: 20%;
+  padding-bottom: 20%;
+  color: white;
+  background-image: url(../assets/images/group-of-people-in-cafe.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.col h3 {
   font-size: 50px;
 }
 
@@ -183,19 +221,35 @@ nav {
   font-size: 25px;
 }
 
+.feature h3 {
+  font-size: 20px;
+}
+
 /* Feature Page body */
-.f-body {
+.feature-body {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
 }
 
+.feature-param {
+  display: flex;
+  width: 80%;
+  padding-bottom: 50px;
+  font-size: 18px;
+}
+
+.feature-param i {
+  margin-right: 10px;
+  font-size: 40px;
+}
+
 .r-side {
   margin-right: 15%;
 }
 
-.l-side {
+.left-side {
   margin-left: 20%;
 }
 
@@ -211,6 +265,17 @@ nav {
 .results-head p {
   margin-top: 25px;
   font-size: 15px;
+}
+
+.results-row {
+  margin-top: 5%;
+  margin-left: 15%;
+  margin-right: 15%;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 20px;
+  align-content: center;
+  text-align: center;
 }
 
 .details {
