--- a/hoffmann-website/src/styles/main.css
+++ b/hoffmann-website/src/styles/main.css
@@ -67,6 +67,7 @@ nav {
   color: #fff;
   padding: 5px 0;
   position: relative;
+  text-transform: uppercase;
 }
 
 /* Button */
@@ -94,10 +95,15 @@ nav {
 .heading-title h1 {
   font-family: montserrat;
   font-size: 44px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .heading-title p {
   font-size: 20px;
+  margin: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /* Explore button */
@@ -229,14 +235,14 @@ nav {
 }
 
 .col-foot {
-  margin: auto;
-  padding-top: 20%;
+  margin: 20px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .col-foot a.btn {
+  margin-top: 50px;
   padding: 15px 15px;
   padding-left: 50px;
   padding-right: 50px;
@@ -282,6 +288,7 @@ nav {
 
 .feature h3 {
   font-size: 20px;
+  margin-top: 20px;
 }
 
 /* Feature Page body */
