--- a/examples-responsive/main.css
+++ b/examples-responsive/main.css
@@ -37,6 +37,36 @@
 .container div {
   background-color: brown;
   text-align: center;
-  padding: 20px 0;
+  padding: 20px;
   font-size: 30px;
+  color: #fff;
+}
+
+.container-2 {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  background-color: dimgray;
+  padding: 10px;
+}
+
+.container-2 div {
+  background-color: darkgray;
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+  color: #fff;
+}
+
+.item1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.item2 {
+  grid-column: 3/4;
+}
+
+.item3 {
+  grid-area: 2/1 / span 3 / span 1;
 }
