--- a/practice-2/src/styles/header.css
+++ b/practice-2/src/styles/header.css
@@ -5,6 +5,17 @@
   background-repeat: no-repeat;
 }
 
+.logo a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ebcb80;
+  letter-spacing: 1px;
+  width: 97;
+  height: 20px;
+}
+
 .navbar {
   padding: 20px;
   display: flex;
@@ -60,12 +71,12 @@ nav.active a {
   color: #fff;
 }
 
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   nav {
     display: flex;
   }
   nav a {
-    font-size: 16px;
+    font-size: 12px;
     padding: 10px;
     color: #fff;
     text-decoration: none;
@@ -73,6 +84,16 @@ nav.active a {
   }
   .menu {
     display: none;
+  }
+  .logo a {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: bold;
+    color: #ebcb80;
+    letter-spacing: 1px;
+    width: 140px;
+    height: 30px;
   }
 }
 
@@ -109,4 +130,7 @@ nav.active a {
   border-radius: 30px;
   text-decoration: none;
   cursor: pointer;
+}
+
+@media screen and (min-width: 480px) {
 }
