--- a/practice-2/src/styles/header.css
+++ b/practice-2/src/styles/header.css
@@ -101,20 +101,23 @@ nav.active a {
 .heading {
   color: #fff;
   position: relative;
-  padding: 15% 0 10%;
-  margin-left: 25%;
-  margin-right: 25%;
+  margin: 126px 20px 65px 20px;
   text-align: center;
 }
 
 .heading-title h1 {
-  font-size: 26px;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  line-height: 24px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .heading-title p {
-  padding-top: 25px;
-  padding-bottom: 25px;
-  font-size: 16px;
+  padding: 20px 40px;
+  font-size: 11px;
+  line-height: 16px;
 }
 
 .btn-explore {
@@ -122,13 +125,14 @@ nav.active a {
   align-items: center;
   align-content: center;
   box-sizing: border-box;
-  padding: 10px 30px;
-  padding-left: 50px;
-  padding-right: 50px;
+  margin-bottom: 100px;
+  padding: 10px 35px 10px;
   background-color: #ebcb80;
   color: #3c3c3c;
   border-radius: 30px;
   text-decoration: none;
+  text-transform: uppercase;
+  font-size: 11px;
   cursor: pointer;
 }
 
