--- a/practice-2/src/styles/screen-sizes/mobile-screen.css
+++ b/practice-2/src/styles/screen-sizes/mobile-screen.css
@@ -1,5 +1,5 @@
 .first-page {
-  background-image: url(../assets/images/background.png);
+  background-image: url(../../assets/images/background.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
