--- a/practice-2/src/styles/header.css
+++ b/practice-2/src/styles/header.css
@@ -1,5 +1,6 @@
 .first-page {
-  background-image: url(../../assets/images/background.png);
+  position: relative;
+  background-image: url(../assets/images/background.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -12,8 +13,6 @@
   font-weight: bold;
   color: #ebcb80;
   letter-spacing: 1px;
-  width: 97;
-  height: 20px;
 }
 
 .navbar {
@@ -34,7 +33,11 @@ nav {
   display: none;
 }
 
-nav.active {
+.menu {
+  color: #fff;
+}
+
+/* nav.active {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,13 +72,13 @@ nav.active a {
 .close-icon.show {
   display: flex;
   color: #fff;
-}
+} */
 
 /* Heading */
 .heading {
   color: #fff;
   position: relative;
-  margin: 126px 20px 65px 20px;
+  margin: 10%;
   text-align: center;
 }
 
@@ -83,29 +86,100 @@ nav.active a {
   font-size: 20px;
   text-transform: uppercase;
   font-weight: bold;
-  line-height: 24px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 0 25%;
 }
 
 .heading-title p {
-  padding: 20px 40px;
+  padding: 5% 25%;
   font-size: 11px;
-  line-height: 16px;
 }
 
 .btn-explore {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 11px;
   display: inline-flex;
   align-items: center;
   align-content: center;
   box-sizing: border-box;
-  margin-bottom: 100px;
-  padding: 10px 35px 10px;
+  margin-bottom: 15%;
+  padding: 1em 5em;
   background-color: #ebcb80;
   color: #3c3c3c;
   border-radius: 30px;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 11px;
+
   cursor: pointer;
+}
+
+/* Tablet */
+
+@media screen and (min-width: 480px) {
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  nav a {
+    font-size: 12px;
+    padding: 10px;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+  .menu {
+    display: none;
+  }
+  .logo a {
+    font-size: 24px;
+  }
+  .heading-title h1 {
+    font-size: 24px;
+  }
+}
+
+/* iPad */
+
+@media screen and (min-width: 768px) {
+  .navbar {
+    margin: 0 20px;
+    padding-top: 30px;
+  }
+  .logo a {
+    font-size: 30px;
+  }
+  nav a {
+    font-size: 14px;
+  }
+  .heading-title h1 {
+    font-size: 28px;
+  }
+  .heading-title p {
+    font-size: 14px;
+  }
+  .btn-explore {
+    font-size: 14px;
+  }
+}
+
+/* Desktop */
+
+@media screen and (min-width: 1024px) {
+  .navbar {
+    margin: 0 30px;
+  }
+  .logo a {
+    font-size: 36px;
+  }
+  nav a {
+    font-size: 16px;
+  }
+  .heading-title h1 {
+    font-size: 45px;
+  }
+  .heading-title p {
+    font-size: 20px;
+  }
+  .btn-explore {
+    font-size: 20px;
+  }
 }
