--- a/practice-2/src/styles/header.css
+++ b/practice-2/src/styles/header.css
@@ -9,6 +9,7 @@
 .logo a {
   text-decoration: none;
   text-transform: uppercase;
+  font-family: Montserrat;
   font-size: 16px;
   font-weight: bold;
   color: #ebcb80;
@@ -83,6 +84,7 @@ nav.active a {
 }
 
 .heading-title h1 {
+  font-family: Montserrat;
   font-size: 20px;
   text-transform: uppercase;
   font-weight: bold;
@@ -118,10 +120,12 @@ nav.active a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 5rem;
   }
   nav a {
     font-size: 12px;
-    padding: 10px;
+    margin: 20px;
+    padding: 20px;
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
