--- a/practice-2/src/styles/main.css
+++ b/practice-2/src/styles/main.css
@@ -1,7 +1,9 @@
+@import url(./fonts.css);
 @import url(./header.css);
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Source-sans-pro;
 }
