--- a/practice-2/src/styles/header.css
+++ b/practice-2/src/styles/header.css
@@ -21,17 +21,20 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-}
-
-.btn {
-  box-sizing: border-box;
-  border: 2px solid #fff;
-  border-radius: 50px;
-  cursor: pointer;
+  font-family: Montserrat;
 }
 
 nav {
   display: none;
+}
+
+.btn {
+  font-family: Montserrat;
+  font-weight: 400;
+  box-sizing: border-box;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  cursor: pointer;
 }
 
 .menu {
@@ -42,8 +45,8 @@ nav {
 .heading {
   color: #fff;
   position: relative;
-  margin: 10%;
   text-align: center;
+  padding: 10% 15% 5%;
 }
 
 .heading-title h1 {
@@ -55,20 +58,21 @@ nav {
 }
 
 .heading-title p {
-  padding: 5% 25%;
-  font-size: 11px;
+  padding: 0 25%;
+  font-size: 8px;
 }
 
 .btn-explore {
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 11px;
+  font-size: 8px;
+  font-family: Montserrat;
   display: inline-flex;
   align-items: center;
   align-content: center;
   box-sizing: border-box;
-  margin-bottom: 15%;
-  padding: 1em 5em;
+  margin: 5% 0;
+  padding: 1em 4em;
   background-color: #ebcb80;
   color: #3c3c3c;
   border-radius: 30px;
@@ -89,6 +93,7 @@ nav {
   }
   nav a {
     font-size: 12px;
+    font-weight: bold;
     padding: 10px;
     color: #fff;
     text-decoration: none;
@@ -100,6 +105,13 @@ nav {
   }
   .heading-title h1 {
     font-size: 24px;
+  }
+  .heading-title p {
+    font-size: 10px;
+  }
+  .btn-explore {
+    font-size: 10px;
+    padding: 1em 4em;
   }
 }
 
@@ -113,8 +125,10 @@ nav {
   .logo a {
     font-size: 30px;
   }
+
   nav a {
     font-size: 14px;
+    margin: 1em;
   }
   .heading-title h1 {
     font-size: 28px;
@@ -124,6 +138,7 @@ nav {
   }
   .btn-explore {
     font-size: 14px;
+    padding: 1em 4em;
   }
 }
 
@@ -132,12 +147,20 @@ nav {
 @media screen and (min-width: 1024px) {
   .navbar {
     margin: 0 30px;
+    padding: 5em;
   }
   .logo a {
     font-size: 36px;
   }
+  nav {
+    padding-right: 5rem;
+  }
   nav a {
-    font-size: 16px;
+    font-size: 18px;
+    margin: 2em;
+  }
+  .btn {
+    padding: 1em 3em;
   }
   .heading-title h1 {
     font-size: 45px;
@@ -147,5 +170,6 @@ nav {
   }
   .btn-explore {
     font-size: 20px;
+    padding: 1em 4em;
   }
 }
