--- a/practice-2/src/styles/main.css
+++ b/practice-2/src/styles/main.css
@@ -1,11 +1,10 @@
 @import url(./reset.css);
 @import url(./fonts.css);
 @import url(./header.css);
-@import url(./subplan.css);
+@import url(./sub-plan.css);
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Source-sans-pro;
 }
