--- a/practice-2/src/styles/sub-plan.css
+++ b/practice-2/src/styles/sub-plan.css
@@ -2,13 +2,7 @@
   background-color: #f6f6f6;
 }
 
-/* .sub-plan-header {
-  width: 100%;
-  padding: 5%;
-  text-align: center;
-  font-family: Montserrat;
-  font-size: 20px;
-} */
+/* Subplan page header */
 
 .sub-plan-header h2 {
   padding: 2em 0 1em;
@@ -16,6 +10,8 @@
   font-family: Montserrat;
   font-size: 20px;
 }
+
+/* Subplan page content */
 
 .sub-plan-content {
   display: flex;
@@ -65,6 +61,8 @@
   font-size: 11px;
 }
 
+/* Get started button hover animation */
+
 a.btn-get-started {
   font-family: Montserrat;
   font-size: 11px;
@@ -102,6 +100,8 @@ a.btn-get-started:hover::before {
   z-index: -1;
 }
 
+/* Freemium plan */
+
 .freemium {
   margin-bottom: 2em;
   padding: 1em 2em;
@@ -115,6 +115,8 @@ a.btn-get-started:hover::before {
   background-blend-mode: multiply, normal;
   background-size: cover;
 }
+
+/* Start-up plan */
 
 .start-up {
   margin-bottom: 2em;
@@ -130,6 +132,8 @@ a.btn-get-started:hover::before {
   background-size: cover;
 }
 
+/* Business plan */
+
 .business {
   padding: 1em 2em;
   color: #ffffff;
@@ -142,6 +146,8 @@ a.btn-get-started:hover::before {
   background-blend-mode: multiply, normal;
   background-size: cover;
 }
+
+/* Enterprise plan */
 
 .enterprise {
   font-weight: 400px;
@@ -156,6 +162,8 @@ a.btn-get-started:hover::before {
   background-blend-mode: multiply, normal;
   background-size: cover;
 }
+
+/* Support screen from 440px to 768px wide */
 
 @media screen and (min-width: 440px) {
   .freemium {
@@ -178,6 +186,8 @@ a.btn-get-started:hover::before {
   }
 }
 
+/* Support screen from 768px to 1024px wide */
+
 @media screen and (min-width: 768px) {
   .sub-plan-header h2 {
     font-size: 44px;
@@ -192,6 +202,8 @@ a.btn-get-started:hover::before {
     height: 248px;
   }
 }
+
+/* Support screen bigger than 1024px */
 
 @media screen and (min-width: 1024px) {
   .sub-plan-header h2 {
