create layout for feature page

--- a/practice-2/src/styles/sub-plan.css
+++ b/practice-2/src/styles/sub-plan.css
@@ -67,6 +67,7 @@ a.btn-get-started {
   font-family: Montserrat;
   font-size: 11px;
   text-decoration: none;
+  text-transform: uppercase;
   padding: 0.5rem 1rem;
   color: #4b4b4b;
   transition: ease-out 0.3s;
