--- a/practice-2/src/styles/fonts.css
+++ b/practice-2/src/styles/fonts.css
@@ -6,6 +6,11 @@
 }
 
 @font-face {
+  font-family: Monts-bold;
+  src: url(../assets/fonts/montserrat/Montserrat-Bold.woff) format("woff");
+}
+
+@font-face {
   font-family: Source-sans-pro;
   src: url(../assets/fonts/source-sans-pro/source-sans-pro-v19-latin-regular.woff)
     format("woff");
