--- a/practice-2/src/styles/main.css
+++ b/practice-2/src/styles/main.css
@@ -2,6 +2,7 @@
 @import url(./fonts.css);
 @import url(./header.css);
 @import url(./sub-plan.css);
+@import url(./feature-page.css);
 
 * {
   margin: 0;
