--- a/practice-2/src/styles/sub-plan.css
+++ b/practice-2/src/styles/sub-plan.css
@@ -136,6 +136,7 @@ a.btn-get-started:hover::before {
 /* Business plan */
 
 .business {
+  margin-bottom: 2em;
   padding: 1em 2em;
   color: #ffffff;
   background: linear-gradient(
