--- a/practice-2/src/styles/feature-page.css
+++ b/practice-2/src/styles/feature-page.css
@@ -33,13 +33,96 @@
   margin-right: 1em;
   margin-left: 0.5em;
 }
+.icon img {
+  width: 30px;
+  height: auto;
+}
 
-.feature-content h4 {
+.feature-details h4 {
   font-size: 12px;
   text-transform: uppercase;
 }
 
-.feature-content p {
+.feature-details p {
   font-size: 11px;
   margin-top: 1em;
+}
+
+.macbook-img img {
+  max-width: 100%;
+  height: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .feature-body {
+    margin: 0 5em;
+    padding: 0 5em;
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .feature-body {
+    margin: 2em 0 2em 5em;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .macbook-img {
+    overflow: hidden;
+  }
+
+  .macbook-img img {
+    width: fit-content;
+    height: fit-content;
+    margin: 0px 0px 0px 200px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .feature-header h2 {
+    font-size: 44px;
+  }
+
+  .feature-header h3 {
+    font-size: 18px;
+  }
+
+  .feature-body {
+    margin: 2em;
+    padding-left: 10em;
+    padding-right: 5em;
+  }
+
+  .feature-param {
+    margin-left: 15%;
+    padding-right: 50px;
+  }
+  .feature-details h4 {
+    font-size: 16px;
+  }
+
+  .feature-details p {
+    font-size: 16px;
+    margin-right: 35%;
+  }
+
+  .icon img {
+    width: 50px;
+    height: auto;
+  }
+
+  .macbook-img {
+    overflow: visible;
+    margin-right: 15%;
+  }
+
+  .macbook-img img {
+    width: auto;
+    height: auto;
+    margin: 0;
+  }
 }
