create and import results css file

--- a/practice-2/src/styles/main.css
+++ b/practice-2/src/styles/main.css
@@ -3,6 +3,7 @@
 @import url(./header.css);
 @import url(./sub-plan.css);
 @import url(./feature-page.css);
+@import url(./results.css);
 
 * {
   margin: 0;
