--- a/practice-2/src/styles/fonts.css
+++ b/practice-2/src/styles/fonts.css
@@ -17,3 +17,11 @@
   font-style: normal;
   font-weight: normal;
 }
+
+@font-face {
+  font-family: Source-sans-pro-bold;
+  src: url(../assets/fonts/source-sans-pro/SourceSansPro-Bold.ttf)
+    format("woff");
+  font-style: normal;
+  font-weight: normal;
+}
