--- a/practice-2/src/styles/results.css
+++ b/practice-2/src/styles/results.css
@@ -39,3 +39,28 @@
   margin-top: 1em;
   padding: 0 8em;
 }
+@media screen and (min-width: 480px) {
+  .results-body {
+    margin: 0 3em;
+  }
+  .details p {
+    padding: 0 10em;
+  }
+}
+@media screen and (min-width: 720px) {
+  .results-head h2 {
+    font-size: 32px;
+  }
+  .results-head p {
+    margin-top: 2em;
+  }
+
+  .results-body {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .statistics {
+    margin: 0;
+  }
+}
