Set breakpoints for tablet and desktop

--- a/practice-2/src/styles/results.css
+++ b/practice-2/src/styles/results.css
@@ -18,12 +18,13 @@
   text-align: center;
 }
 
+.statistics {
+  margin-top: 20px;
+}
+
 .percent {
   width: 108px;
   height: 108px;
-}
-.statistics {
-  margin: 2em;
 }
 
 .details {
@@ -44,7 +45,7 @@
     margin: 0 3em;
   }
   .details p {
-    padding: 0 10em;
+    padding: 0 3em;
   }
 }
 @media screen and (min-width: 720px) {
@@ -57,10 +58,33 @@
 
   .results-body {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin: 3em 2em;
   }
 
-  .statistics {
-    margin: 0;
+  .details p {
+    margin-left: 3em;
+    margin-right: 3em;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .results-head h2 {
+    font-size: 44px;
+  }
+  .results-head p {
+    font-size: 16px;
+  }
+
+  .percent {
+    width: 204px;
+    height: 204px;
+  }
+
+  .details h3 {
+    font-size: 18px;
+  }
+
+  .details p {
+    font-size: 16px;
   }
 }
