styling for form page mobile version

--- a/practice-2/src/styles/main.css
+++ b/practice-2/src/styles/main.css
@@ -4,6 +4,7 @@
 @import url(./sub-plan.css);
 @import url(./feature-page.css);
 @import url(./results.css);
+@import url(./form.css);
 
 * {
   margin: 0;
