--- a/practice-2/src/styles/form.css
+++ b/practice-2/src/styles/form.css
@@ -14,6 +14,8 @@
   color: #fff;
   font-family: Monts-bold;
   font-size: 20px;
+  line-height: 40px;
+  letter-spacing: -0.5px;
 }
 
 .form {
@@ -42,7 +44,7 @@
   text-align: start;
   padding: 10px 10px;
   border: 1px solid #dadce0;
-  border-radius: 7px;
+  border-radius: 5px;
   outline: none;
 }
 
@@ -61,4 +63,33 @@
   border-radius: 50px;
   background-color: #ebcb80;
   cursor: pointer;
+}
+
+@media screen and (min-width: 720px) {
+  .form-head {
+    font-size: 28px;
+  }
+
+  .form h3 {
+    font-size: 16px;
+  }
+
+  .input {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .form-head {
+    font-size: 44px;
+  }
+
+  .form h3 {
+    font-size: 18px;
+  }
+
+  .input {
+    width: 360px;
+    font-size: 16px;
+  }
 }
