--- a/practice-2/src/styles/header.css
+++ b/practice-2/src/styles/header.css
@@ -9,7 +9,7 @@
 .logo a {
   text-decoration: none;
   text-transform: uppercase;
-  font-family: Montserrat;
+  font-family: Monts-bold;
   font-size: 16px;
   font-weight: bold;
   color: #ebcb80;
@@ -50,7 +50,7 @@ nav {
 }
 
 .heading-title h1 {
-  font-family: Montserrat;
+  font-family: Monts-bold;
   font-size: 22px;
   text-transform: uppercase;
   font-weight: bold;
@@ -144,16 +144,13 @@ nav {
 
 /* Screen from 1024px and bigger */
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1440px) {
   .navbar {
     margin: 0 30px;
     padding: 5em;
   }
   .logo a {
     font-size: 36px;
-  }
-  nav {
-    padding-right: 5rem;
   }
   nav a {
     font-size: 18px;
