--- a/practice-2/src/styles/fonts.css
+++ b/practice-2/src/styles/fonts.css
@@ -20,7 +20,7 @@
 
 @font-face {
   font-family: Source-sans-pro-bold;
-  src: url(../assets/fonts/source-sans-pro/SourceSansPro-Bold.ttf)
+  src: url(../assets/fonts/source-sans-pro/source-sans-pro-v19-latin-900.woff)
     format("woff");
   font-style: normal;
   font-weight: normal;
