--- a/practice-2/src/styles/feature-page.css
+++ b/practice-2/src/styles/feature-page.css
@@ -53,16 +53,10 @@
   height: auto;
 }
 
-@media screen and (min-width: 480px) {
-  .feature-body {
-    margin: 0 5em;
-    padding: 0 5em;
-    display: flex;
-    align-items: center;
-  }
-}
-
 @media screen and (min-width: 768px) {
+  .feature-header h2 {
+    font-size: 32px;
+  }
   .feature-body {
     margin: 2em 0 2em 5em;
     padding: 0;
