--- a/practice-2/src/styles/header.css
+++ b/practice-2/src/styles/header.css
@@ -30,7 +30,8 @@ nav {
 
 .btn {
   font-family: Montserrat;
-  font-weight: 400;
+  font-size: 11px;
+  padding: 1em 2em;
   box-sizing: border-box;
   border: 2px solid #fff;
   border-radius: 50px;
@@ -51,15 +52,15 @@ nav {
 
 .heading-title h1 {
   font-family: Monts-bold;
-  font-size: 22px;
+  font-size: 20px;
   text-transform: uppercase;
   font-weight: bold;
   padding: 0 15%;
 }
 
 .heading-title p {
-  padding: 0 25%;
-  font-size: 8px;
+  padding: 0 2em;
+  font-size: 11px;
 }
 
 .btn-explore {
@@ -80,9 +81,9 @@ nav {
   cursor: pointer;
 }
 
-/* Screen from 480px to 768px */
+/* Screen from 768px to 1024px */
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .menu {
     display: none;
   }
@@ -92,49 +93,27 @@ nav {
     justify-content: space-between;
   }
   nav a {
+    font-family: Source-sans-pro-bold;
     font-size: 12px;
-    font-weight: bold;
     padding: 10px;
+    margin: 1em;
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
   }
-
-  .logo a {
-    font-size: 24px;
-  }
-  .heading-title h1 {
-    font-size: 24px;
-  }
-  .heading-title p {
-    font-size: 10px;
-  }
-  .btn-explore {
-    font-size: 10px;
-    padding: 1em 4em;
-  }
-}
-
-/* Screen from 768px to 1024px */
-
-@media screen and (min-width: 768px) {
   .navbar {
-    margin: 0 20px;
     padding-top: 30px;
   }
   .logo a {
     font-size: 30px;
   }
 
-  nav a {
-    font-size: 14px;
-    margin: 1em;
-  }
   .heading-title h1 {
-    font-size: 28px;
+    font-size: 32px;
   }
   .heading-title p {
-    font-size: 14px;
+    font-size: 11px;
+    padding: 1em 5em;
   }
   .btn-explore {
     font-size: 14px;
