--- a/practice-2/src/styles/results.css
+++ b/practice-2/src/styles/results.css
@@ -37,18 +37,12 @@
 
 .details p {
   font-size: 11px;
-  margin-top: 1em;
-  padding: 0 8em;
+  /* margin-top: 1em;
+  padding: 0 8em; */
+  margin: 1em 5em;
 }
-@media screen and (min-width: 480px) {
-  .results-body {
-    margin: 0 3em;
-  }
-  .details p {
-    padding: 0 3em;
-  }
-}
-@media screen and (min-width: 720px) {
+
+@media screen and (min-width: 768px) {
   .results-head h2 {
     font-size: 32px;
   }
@@ -58,13 +52,8 @@
 
   .results-body {
     display: flex;
-    justify-content: space-evenly;
-    margin: 3em 2em;
-  }
-
-  .details p {
-    margin-left: 3em;
-    margin-right: 3em;
+    justify-content: center;
+    margin: 3em 1em;
   }
 }
 @media screen and (min-width: 1440px) {
