--- a/practice-2/src/styles/components/form.css
+++ b/practice-2/src/styles/components/form.css
@@ -1,5 +1,5 @@
 .form-page {
-  background-image: url(../assets/images/mountain.png);
+  background-image: url(../../assets/images/mountain.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
