--- a/practice-2/src/styles/components/sub-plan.css
+++ b/practice-2/src/styles/components/sub-plan.css
@@ -1,5 +1,6 @@
 .sub-plan {
   background-color: #f6f6f6;
+  max-width: 420px2;
 }
 
 /* Subplan page header */
@@ -113,7 +114,7 @@ a.btn-get-started:hover::before {
       rgba(60, 60, 60, 0.198171) 0%,
       rgba(60, 60, 60, 0.704257) 100%
     ),
-    url(../assets/images/coffee-cup.jpg);
+    url(../../assets/images/coffee-cup.jpg);
   background-blend-mode: multiply, normal;
   background-size: cover;
 }
@@ -129,7 +130,7 @@ a.btn-get-started:hover::before {
       rgba(60, 60, 60, 0.198171) 0%,
       rgba(60, 60, 60, 0.704257) 100%
     ),
-    url(../assets/images/coffee.jpg);
+    url(../../assets/images/coffee.jpg);
   background-blend-mode: multiply, normal;
   background-size: cover;
 }
@@ -145,7 +146,7 @@ a.btn-get-started:hover::before {
       rgba(60, 60, 60, 0.198171) 0%,
       rgba(60, 60, 60, 0.704257) 100%
     ),
-    url(../assets/images/coffee-shop.jpg);
+    url(../../assets/images/coffee-shop.jpg);
   background-blend-mode: multiply, normal;
   background-size: cover;
 }
@@ -160,7 +161,7 @@ a.btn-get-started:hover::before {
       rgba(60, 60, 60, 0.198171) 0%,
       rgba(60, 60, 60, 0.704257) 100%
     ),
-    url(../assets/images/group-of-people-in-cafe.jpg);
+    url(../../assets/images/group-of-people-in-cafe.jpg);
   background-blend-mode: multiply, normal;
   background-size: cover;
 }
