--- a/practice-2/src/styles/main.css
+++ b/practice-2/src/styles/main.css
@@ -5,6 +5,7 @@
 @import url(./fonts.css);
 
 /* Common */
+@import url(./common/variables.css);
 @import url(./common/common.css);
 
 /* Components */
