--- a/practice-2/src/styles/components/sub-plan.css
+++ b/practice-2/src/styles/components/sub-plan.css
@@ -1,6 +1,5 @@
 .sub-plan {
-  background-color: #f6f6f6;
-  max-width: 420px2;
+  background-color: var(--light-grey);
 }
 
 /* Subplan page header */
@@ -9,7 +8,7 @@
   padding: 2em 0 1em;
   text-align: center;
   font-family: Monts-bold;
-  font-size: 20px;
+  font-size: var(--font-size-lg);
 }
 
 /* Subplan page content */
@@ -26,21 +25,21 @@
 
 .sub-plan-content h2 {
   font-family: Source-sans-pro;
-  font-size: 12px;
+  font-size: var(--font-size-sm);
   text-transform: uppercase;
   letter-spacing: 2px;
 }
 
 .sub-plan-content h3 {
   font-family: Montserrat;
-  font-size: 36px;
+  font-size: var(--font-size-3xlg);
   font-weight: bold;
 }
 
 .sub-plan-content h3::before {
   content: "\0024";
   font-family: Montserrat;
-  font-size: 12px;
+  font-size: var(--font-size-sm);
   vertical-align: 1em;
   letter-spacing: 5px;
 }
@@ -51,7 +50,7 @@
   margin: 5px 0;
   padding-bottom: 12px;
   border-radius: 10px;
-  background: #ffffff;
+  background: var(--white);
   box-sizing: border-box;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -60,14 +59,14 @@
   margin: 20px 5px;
   padding: 0 15px;
   font-family: Source-sans-pro;
-  font-size: 11px;
+  font-size: var(--font-size-xsm);
 }
 
 /* Get started button hover animation */
 
 a.btn-get-started {
   font-family: Montserrat;
-  font-size: 11px;
+  font-size: var(--font-size-xsm);
   text-decoration: none;
   text-transform: uppercase;
   padding: 0.5rem 1rem;
@@ -78,7 +77,7 @@ a.btn-get-started {
 }
 
 a.btn-get-started:hover {
-  color: #4b4b4b;
+  color: var(--light-black);
   cursor: pointer;
 }
 
@@ -91,7 +90,7 @@ a.btn-get-started::before {
   bottom: 0;
   opacity: 0;
   content: "";
-  background-color: #ebcb80;
+  background-color: var(--yellow-brown);
   border-radius: 50px;
 }
 
@@ -108,7 +107,7 @@ a.btn-get-started:hover::before {
 .freemium {
   margin-bottom: 2em;
   padding: 1em 2em;
-  color: #ffffff;
+  color: var(--white);
   background: linear-gradient(
       180deg,
       rgba(60, 60, 60, 0.198171) 0%,
@@ -124,7 +123,7 @@ a.btn-get-started:hover::before {
 .start-up {
   margin-bottom: 2em;
   padding: 1em 2em;
-  color: #ffffff;
+  color: var(--white);
   background: linear-gradient(
       180deg,
       rgba(60, 60, 60, 0.198171) 0%,
@@ -140,7 +139,7 @@ a.btn-get-started:hover::before {
 .business {
   margin-bottom: 2em;
   padding: 1em 2em;
-  color: #ffffff;
+  color: var(--white);
   background: linear-gradient(
       180deg,
       rgba(60, 60, 60, 0.198171) 0%,
@@ -155,7 +154,7 @@ a.btn-get-started:hover::before {
 
 .enterprise {
   padding: 1em 2em;
-  color: #ffffff;
+  color: var(--white);
   background: linear-gradient(
       180deg,
       rgba(60, 60, 60, 0.198171) 0%,
