--- a/practice-2/src/styles/components/form.css
+++ b/practice-2/src/styles/components/form.css
@@ -33,7 +33,7 @@
   margin-top: 30px;
 }
 
-.inputBox {
+.input-box {
   margin: 20px 30px;
 }
 
@@ -68,6 +68,7 @@
 @media screen and (min-width: 720px) {
   .form-head {
     font-size: 28px;
+    margin-bottom: 2em;
   }
 
   .form h3 {
