--- a/practice-2/src/styles/fonts.css
+++ b/practice-2/src/styles/fonts.css
@@ -1,17 +1,19 @@
 @font-face {
-  font-family: Montserrat;
+  font-family: Montserrat, Arial, sans-serif;
   src: url(../assets/fonts/montserrat/Montserrat-Regular.woff) format("woff");
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
-  font-family: Monts-bold;
+  font-family: Monts-bold, Arial, sans-serif;
   src: url(../assets/fonts/montserrat/Montserrat-Bold.woff) format("woff");
+  font-style: normal;
+  font-weight: normal;
 }
 
 @font-face {
-  font-family: Source-sans-pro;
+  font-family: Source-sans-pro, Arial, sans-serif;
   src: url(../assets/fonts/source-sans-pro/source-sans-pro-v19-latin-regular.woff)
     format("woff");
   font-style: normal;
@@ -19,7 +21,7 @@
 }
 
 @font-face {
-  font-family: Source-sans-pro-bold;
+  font-family: Source-sans-pro-bold, Arial, sans-serif;
   src: url(../assets/fonts/source-sans-pro/source-sans-pro-v19-latin-900.woff)
     format("woff");
   font-style: normal;
